<resources>
    <string name="app_name">FIIT Roaster</string>
    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to the homepage -->
    <string name="live_cooking">"Live Cooking"</string>
    <string name="live_cooking_dscr">"Cook with your friend and other users online
        trough a video call"</string>
    <string name="manage_orders_btn">"Orders"</string>
    <string name="manage_orders">"Manage done orders"</string>
    <string name="menu_btn">"Show menu"</string>
    <string name="menu_dscr">"Discover a plenty of delicious meals"</string>
    <string name="contact_us">"Contact us:\n +421 123654789"</string>
    <!-- Strings related to the Menu page -->
    <string name="menu">"Menu"</string>
    <!-- Strings related to the My orders page -->
    <string name="my_meals">"My meals"</string>
    <string name="address">"Address"</string>
    <string name="phone">"+421 xxxxxxxxx"</string>
    <string name="by_cash">"Cash"</string>
    <string name="with_card">"Online with card"</string>
    <!-- WebRTC -->
    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="pref_speakerphone_default">auto</string>
    <string name="edit_meals">Edit meals</string>

</resources>