<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/appName_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/skyblue"
        android:shadowRadius="15"
        android:text="@string/app_name"
        android:textColor="@color/royalblue"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName_tv" />

    <View
        android:id="@+id/background_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/content_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName_tv" />

    <TextView
        android:id="@+id/menu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/menu_dscr"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/menu_btn"
        app:layout_constraintTop_toBottomOf="@+id/menu_btn" />

    <TextView
        android:id="@+id/live_cooking_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:text="@string/live_cooking_dscr"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/live_cooking_btn"
        app:layout_constraintTop_toBottomOf="@+id/live_cooking_btn" />

    <TextView
        android:id="@+id/orders_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:text="@string/manage_orders"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/live_cooking_btn"
        app:layout_constraintTop_toBottomOf="@+id/orders_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_styles"
        android:text="@string/menu_btn"
        app:layout_constraintStart_toStartOf="@+id/background_view"
        app:layout_constraintTop_toTopOf="@+id/background_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/live_cooking_btn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_styles"
        android:text="@string/live_cooking"
        app:layout_constraintStart_toStartOf="@+id/menu_btn"
        app:layout_constraintTop_toBottomOf="@+id/menu_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/orders_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        android:background="@drawable/button_styles"
        android:text="@string/manage_orders_btn"
        app:layout_constraintStart_toStartOf="@+id/live_cooking_tv"
        app:layout_constraintTop_toBottomOf="@+id/live_cooking_tv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:shadowColor="@color/dodgerblue"
        android:text="@string/contact_us"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/background_view"
        app:layout_constraintStart_toStartOf="@+id/background_view" />


</androidx.constraintlayout.widget.ConstraintLayout>